--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
   </head>
   <body>
-    <div id="apple-shelf"></div>
-    <div id="orange-shelf"></div>
+    <div class="apple" id="apple-shelf"></div>
+    <div class="oranges" id="orange-shelf"></div>
     <script src="main.js"></script>
   </body>
 </html>
